plugins {
    id 'java'
    id 'io.qameta.allure' version "2.11.2"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

allure {
    version = "2.24.0"

    adapter {
        autoconfigure.set(true)

        frameworks {
            junit5 {
                adapterVersion.set("2.24.0")
                enabled.set(true)
                autoconfigureListeners.set(true)
            }
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'io.qameta.allure:allure-junit5:2.24.0'
    testImplementation 'io.qameta.allure:allure-selenide:2.24.0'

    testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
    testImplementation 'net.datafaker:datafaker:2.5.2'
    testImplementation 'com.codeborne:selenide:7.0.4'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testImplementation 'org.slf4j:slf4j-simple:2.0.9'
    testImplementation 'org.seleniumhq.selenium:selenium-java:4.39.0'
    testImplementation 'commons-io:commons-io:2.21.0'
    testImplementation 'com.codeborne:pdf-test:1.8.1'
    testImplementation 'com.codeborne:xls-test:1.4.3'
    testImplementation 'com.opencsv:opencsv:5.12.0'
    testImplementation 'com.google.code.gson:gson:2.10.1'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:3.2.2'

}

// создает уникальную папку для каждого запуска allure
// В build.gradle оставьте фиксированный путь для Jenkins
def allureResultsDir = "build/allure-results" // фиксированный путь для Jenkins
def archiveDir = "build/allure-results-archive/" + new Date().format('yyyy-MM-dd_HH-mm-ss')


// ⚠️ ВАЖНО: Определяем задачу archiveAllureResults ДО ее использования
task archiveAllureResults {
    doLast {
        def sourceDir = file("$buildDir/allure-results")
        if (sourceDir.exists()) {
            def targetDir = file(archiveDir)
            // Создаем директорию назначения
            targetDir.mkdirs()
            // Копируем файлы
            copy {
                from sourceDir
                into targetDir
            }
            println "Allure results archived to: ${targetDir.absolutePath}"
        } else {
            println "Source directory $sourceDir does not exist, nothing to archive"
        }
    }
}

tasks.withType(Test) {
    useJUnitPlatform()

    // Настройки кодировки - добавьте их здесь
    systemProperty "file.encoding", "utf-8"
    systemProperty "console.encoding", "utf-8"

    systemProperties = [
            'selenide.browser': 'chrome',
            'selenide.headless': 'true',  // ← ВАЖНО: true для Jenkins!
            //'selenide.headless': 'false',
            'allure.results.directory': allureResultsDir, // создает уникальную папку для каждого запуска allure
            'allure.report.directory': "$buildDir/reports/allure-report"
    ]
    jvmArgs = [
            '-Dwebdriver.chrome.driver=/usr/bin/chromedriver', // если нужно
            '-Dselenide.headless=true'
    ]


    testLogging {
        lifecycle {
            events "passed", "skipped", "failed", "standard_error", "standard_out"
            //exeptionFormat "short"
        }
    }
    // ✅ После тестов архивируем результаты
    finalizedBy archiveAllureResults
}
// типы тасков по тэгам
task simple_test(type: Test) {
    useJUnitPlatform {
        includeTags("SEARCH")
    }
}
    task allure_test(type: Test) { // TextBoxStepsAllureTest
        useJUnitPlatform {
            includeTags("ALLURE")
        }
    }
    task ui_tests(type: Test) {
        useJUnitPlatform {
            includeTags("UI")
        }
    }

    task api_tests(type: Test) {
        useJUnitPlatform {
            includeTags("API")
        }
    }

    task smoke_tests(type: Test) {
        useJUnitPlatform {
            includeTags("SMOKE", "REGRESSION")  // Два тега
        }
    }
//task specific_package_tests(type: Test) {
//    useJUnitPlatform {
//        includePackages("com.example.ui")  // Фильтр по пакету
//    }
//}

//task specific_class_tests(type: Test) {
//    useJUnitPlatform {
//        includeClassNamePatterns(".*UITest")  // Фильтр по имени класса
//    }
//}


// ✅ ИСПРАВЛЕННЫЕ ЗАДАЧИ:
// Задачи для Allure отчета
tasks.register('serveAllure', Exec) {
    dependsOn test
    description = 'Serve Allure report'
    group = 'Reporting'

    doFirst {
        println "Allure results directory: $buildDir/allure-results"
        println "Note: Allure CLI must be installed on your system!"
        println "Install with: scoop install allure"
    }

    commandLine 'cmd', '/c', 'allure', 'serve', "$buildDir/allure-results"
}

tasks.register('allureGenerate', Exec) {
    dependsOn test
    description = 'Generate Allure report'
    group = 'Reporting'

    commandLine 'cmd', '/c', 'allure', 'generate',
            "$buildDir/allure-results",
            '-o', "$buildDir/reports/allure-report",
            '--clean'
}

tasks.register('openReport') {
    dependsOn allureGenerate
    description = 'Open Allure report in browser'
    group = 'Reporting'

    doLast {
        def reportFile = file("$buildDir/reports/allure-report/index.html")
        if (reportFile.exists()) {
            java.awt.Desktop.desktop.browse reportFile.toURI()
            println "Report opened: $reportFile"
        } else {
            println "Report not found at: $reportFile"
            println "Run './gradlew test allureGenerate' first"
        }
    }
}

tasks.register('testAndOpenReport') {
    dependsOn test, openReport
    description = 'Run tests and open Allure report'
    group = 'Verification'
}

task cleanAllureResults(type: Delete) { // очистка папки с результатами ./gradlew cleanAllureResults
    delete "$buildDir/allure-results"
    delete "$buildDir/reports/allure-report"
    delete "$buildDir/allure-results-archive"
    description = "Очищает папки allure-results, allure-report и архивы"
}

clean {
    dependsOn cleanAllureResults
}

